--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ code {
 
 .g-card-image {
   border-radius: 10px; 
-  width: 300px; 
-  height: 480px;
+  width: 350px; 
+  height: 450px;
   box-shadow: 0px 0px 3px 1px #ccc; 
 }
 
@@ -47,4 +47,26 @@ code {
 .err-msg {
   color: #EE6352;
   padding: 10px 15px; 
+}
+
+.logo{
+  color: black; 
+  text-decoration: none; 
+}
+
+.logo:hover{
+  color: #6a6a98; 
+  text-decoration: none; 
+}
+
+.navbar{
+  background-image: linear-gradient(45deg, white, #5c5b947a) !important;
+}
+
+.nav-link{
+  color: white !important; 
+}
+
+.nav-link:hover{
+  color: rgb(53, 53, 53) !important; 
 }
